<resources  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">V16 DirectDemocracyP2P (DDP2P)</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_directories">Manage Directories</string>
    <string name="action_back">Back</string>
    <string name="new_safe_my">Define a New Identity Myself</string>
    <string name="new_safe_other">Import From Picture</string>
    <string name="new_org">Define a New Organization</string>
    <string name="new_icon">Add</string>
    <string name="Device">Device</string>
    <string name="Slogan">Slogan</string>
    <string name="LastSync">Last Sync</string>
    <string name="LastContact">Last Contact</string>
    <string name="set_name_my" translatable="false">set name my</string>
    <string name="set_email" translatable="false">set email</string>
    <string name="set_slogan" translatable="false">set slogan</string>
    <string name="add_to_current_org" translatable="false">add to current org</string>
    <string name="export_peer_pk" translatable="false">export peer pk</string>
    <string name="load_object" translatable="false">Import Object From Text</string>
    <string name="safe_profile_drawer_open">Open safe profile drawer</string>
    <string name="safe_profile_drawer_close">Close safe profile drawer</string>
    <string name="name" translatable="false">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="slogan" translatable="false">Slogan</string>
    <string name="profile_pic_datalist" translatable="false">profile picture</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="submit_new" translatable="false">Submit New</string>
    <string name="ok" translatable="false">OK</string>
    <string name="Yes">YES</string>
    <string name="Cancel">CANCEL</string>
    <string name="LoadQuestion">Do you wish to load?</string>
    <string name="SaveSuccess">Saving successful!</string>
    <string name="send" translatable="false">Send</string>
    <string name="input" translatable="false">input...</string>
    <string name="org_register">Register</string>
    <string name="org_register_need">First Register in Organization!</string>
    <string name="organization">Organization</string>
    <string name="forum">Forum</string>
    <string name="justification">Justification</string>
    <string name="constituents" translatable="false">Constituent</string>
    <string name="motion" translatable="false">Motion</string>
    <string name="news" translatable="false">News</string>
    <string name="org_set" translatable="false">Settings</string>
    <string name="org_profile" translatable="false">Profile</string>
    <string name="body" translatable="false">Body</string>
    <string name="forename" translatable="false">Forename</string>
    <string name="surname" translatable="false">Surname</string>
    <string name="neighborhood" translatable="false">Neighborhood</string>
    <string name="keys" translatable="false">Keys</string>
    <string name="has_right_to_vote" translatable="false">Has Right To Vote</string>
    <string name="phone_number" translatable="false">Phone Number</string>
    <string name="constituent_slogan" translatable="false">Slogan</string>
    <string name="profile_picture" translatable="false">Profile Picture</string>
    <string name="eligibility" translatable="false">Eligibility</string>
    <string name="extra_fields" translatable="false">Extra Fields</string>
    <string name="eligible" translatable="false">Eligible</string>
    <string name="ineligible" translatable="false">Ineligible</string>
    <string name="description" translatable="false">Description</string>
    <string name="inst_for_motion" translatable="false">Instruction for motion</string>
    <string name="inst_for_registration" translatable="false">Instruction for registration</string>
    <string name="add_extra" translatable="false">Add Extra Field in White Pages Schema</string>
    <string name="varied_voting_right" translatable="false">Varied voting right</string>
    <string name="max_voting_level" translatable="false">Max voting level</string>
    <string name="org_icon" translatable="false">Organization icon</string>
    <string name="rebuttal_or_answer">Do you want to create a rebuttal to this \"<xliff:g id="dialog_justification1" example="Proposal">Justification</xliff:g>\" rather than use it?"</string>
    <string name="reffered_label">You are referring to <i>\"<xliff:g id="dialog_justification1" example="Proposal">Justification</xliff:g>\"</i>:</string>
    <string name="justification_add">Add New <xliff:g id="dialog_justification1" example="Proposal">Justification</xliff:g>?</string>
    <string name="justification_add_">Add New</string>
    <string name="justification_add_justification">Add New Justification?</string>
    <string name="refute">Refute</string>
    <string name="reuse_justification">Reuse</string>
    <string name="swipe">Swipe sideway for other views!</string>
    <string name="users">Users</string>
    <string name="organizations">Organizations</string>
    <string name="support" translatable="false">Support</string>
    <string name="against" translatable="false">Against</string>
    <string name="neutral" translatable="false">Neutral</string>
    <string name="title" translatable="false">Title</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="view_votes" translatable="false">Votes</string>
    <string name="division" translatable="false">Division</string>
    <string name="subdivision" translatable="false">Subdivision</string>
    <string name="trustworthy" translatable="false">Trustworthy</string>
    <string name="voting_right" translatable="false">Voting Right</string>
    <string name="new_constituent" translatable="false">New Constituent</string>
    <string name="new_neighborhood" translatable="false">New Neighborhood</string>
    <string name="directory_empty" translatable="false">There is no directory server, please add one from top right "+" mark!</string>
    <string name="directory_instruction" translatable="false">Directory Address, such as: \nDIR%B%0.10.07://10.0.0.1:25123:25123:Name</string>
    <string name="HintEmptyView">You can add items (e.g. identities for communication, organizations, etc.) using the + menu above! \n\nManage your listing directories from the standard menu!</string>
    <string name="news_title">News Title</string>
    <string name="motion_title">Motion Title</string>
    <string name="delete_organization">Delete <xliff:g id="organization_in_delete">Organization</xliff:g></string>
    <string name="wanna_delete_organization">Do you really want to delete organization?</string>
    <string name="toast_deleting_organization">Deleting Organization… Exit Program to Refresh!</string>
    <string name="DDP2P">DDP2P</string>
    <string name="browse_web_object">Browse web objects</string>
    <string name="help_import_web_object">\tNavigate the webpage loaded in the below browser (in the blue frame) to the data that you want to import.\n\tYou can inspect the existence of legitimate data in the current webpage by pressing the \'Decode Content\' button.\n\tIf the detected data is what you are looking for, then you can import it by pressing the button \'Import Current Object\'.</string>
    <string name="label_root">Root:</string>
    <string name="import_current_object">Import Current Object</string>
    <string name="decode_content">Decode Content</string>
    <string name="quit_ddp2p">Quit DDP2P</string>
    <string name="menu_settings_update">Settings (Updates)</string>
    <string name="menu_start_local_directory">Start Local Directory</string>
    <string name="start_up_wizzard">Identity\n\nDo you want to import your DDP2P identity from another device, or to create a new identity?</string>
    <string name="skip">Skip</string>
    <string name="create_new">Create New</string>
    <string name="import_identity">Import</string>
    <string name="dialog_label_enter_data_to_import">Please enter or paste encoded information here:</string>
    <string name="dialog_wizard_title">StartUp Wizard</string>
    <string name="announcement_import_successful">Successfully Imported Existing:</string>
    <string name="refresh">Refresh</string>
    <string name="import_web_object">Import Web Object</string>
    <string name="import_web_object_instr_dir">For your new identity to be useful, it has to be registered with globally accessible \'Meeting Points\' who direct your friends to you while you travel. Here you can select and adopt such \'Meeting Points\' by navigating the embedded browser and clicking \'Import Current Object\'. You may inspect the selections by clicking the button \'Decode Content\'.  When you are done, use the android back button to return to DDP2P!</string>
    <string name="import_web_object_instr">Now you can select and load friends, groups and debate items by navigating the embedded browser and clicking \'Import Current Object\'. You may inspect the selections by clicking the button \'Decode Content\'. When you are done, use the android back button to return to DDP2P!</string>
    <string name="continue_create_new_peer">Continue Creation New Peer</string>
    <string name="dialog_delete_question">Do you really want to delete the item? If your connections have it you may get it back! To avoid getting botherred by it again you should sometimes rather block and hide it!</string>
    <string name="dialog_delete_title">Deleting Confirmation</string>
    <string name="block">Block</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="settings_show_hidden">Show Hidden</string>
    <string name="drawer_safe_Set_Name">Set Name</string>
    <string name="drawer_safe_Reset_Last_Sync_Date">Reset Last Sync Date</string>
    <string name="drawer_safe_Hide_This_Safe">Hide This Safe</string>
    <string name="drawer_safe_Access_It">Access It</string>
    <string name="drawer_safe_Block_It">Block It</string>
    <string name="drawer_safe_Serve_It">Serve It</string>
    <string name="drawer_safe_Set_Myself">Set Myself</string>
    <string name="drawer_safe_Export_Address">Export Address</string>
    <string name="drawer_safe_Select_DirectoryServer">Select DirectoryServer</string>
    <string name="drawer_safe_Set_Instance">Set Instance</string>
    <string name="drawer_safe_Unhide_This_Safe">UnHide This Safe</string>
    <string name="drawer_safe_Stop_Serving_This_Safe">Stop Serving This Safe</string>
    <string name="drawer_safe_Stop_Accessing_It">Stop Accessing It</string>
    <string name="drawer_safe_Stop_Blocking_It">Stop Blocking It</string>
    <string name="drawer_safe_Stop_Serving_It">Stop Serving It</string>
    <string name="Toast_Thread_Pings">Toast Thread Pings</string>
    <string name="startup_create_new_identity">Create New Identity</string>
    <string name="startup_skip_identity">Skip (Use menu to do it later)</string>
    <string name="startup_import_old_identity">Import Old Identity from a\nContainer (file/image/URL)</string>
    <string name="Org_ExtraField_Label">Label</string>
    <string name="Org_ExtraField_DefaultValue">Default</string>
    <string name="Org_ExtraField_Level">Level</string>
    <string name="Org_ExtraField_Hint">Hint</string>
    <string name="Org_FieldExtra_ValuesList">Values divided by \'%s\'</string>
    <string name="Safe_EmailVerification">Email For Verification</string>
    <string name="Safe_DeviceName">Device Name (e.g., Android)</string>
    <string name="Save_NameHint">Name By Which Your Friends Know You</string>
</resources>