<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/add_motion_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage|textCapWords|textAutoCorrect|textAutoComplete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body" />

        <EditText
            android:id="@+id/add_motion_body"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/motion_enhancing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enhance" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_add_motion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/submit" />

</LinearLayout>